@startuml lab2_diagram
skinparam Linetype ortho

'Pokemons

object Pokemon
Pokemon : From ru.ifmo.se.pokemon

class Tropius {
    name: String
    level: int
    +Tropius()
    setStats()
    setType()
    setMove()
}

class Eevee {
    name: String
    level: int
    +Eevee()
    setStats()
    setType()
    setMove()
}

class Glaceon {
    name: String
    level: int
    +Glaceon()
    setStats()
    setType()
    addMove()
}

class Oddish {
    name: String
    level: int
    +Oddish()
    setStats()
    setType()
    setMove()
}

class Gloom {
    name: String
    level: int
    +Gloom()
    setStats()
    setType()
    addMove()
}

class Vileplume {
    name: String
    level: int
    +Vileplume()
    setStats()
    setType()
    addMove()
}

Tropius --|> Pokemon

Eevee --|> Pokemon
Glaceon --|> Eevee

Oddish --|> Pokemon
Gloom --|> Oddish
Vileplume --|> Gloom

'Moves

class AerialAce {
    type: Type
    pow: double
    acc: double
    +AerialAce()
    #applySelfEffects(): void
    #describe(): String
}

class Bulldoze {
    type: Type
    pow: double
    acc: double
    +Bulldoze()
    #applyOppEffects(): void
    #describe(): String
}

class Facade {
    type: Type
    pow: double
    acc: double
    +Facade()
    #applyOppDamage(): void
    #describe(): String
}

class Headbutt {
    type: Type
    pow: double
    acc: double
    +Headbutt()
    #applyOppEffects(): void
    #describe(): String
}

class RazorLeaf {
    type: Type
    pow: double
    acc: double
    +RazorLeaf()
    #calcCriticalHit(): double
    #describe(): String
}

object PhysicalMove
PhysicalMove : From ru.ifmo.se.pokemon.DamageMove

AerialAce --|> PhysicalMove
Bulldoze --|> PhysicalMove
Facade --|> PhysicalMove
Headbutt --|> PhysicalMove
RazorLeaf --|> PhysicalMove

object DamageMove
DamageMove : From ru.ifmo.se.pokemon.Move

object SpecialMove
SpecialMove : From ru.ifmo.se.pokemon.DamageMove

PhysicalMove --|> DamageMove
SpecialMove --|> DamageMove

class Acid {
    type: Type
    pow: double
    acc: double
    +Acid()
    #applyOppEffects(): void
    #describe(): String
}

class FrostBreath {
    type: Type
    pow: double
    acc: double
    +FrostBreath()
    #calcCriticalHit(): double
    #describe(): String
}

Acid --|> SpecialMove
FrostBreath --|> SpecialMove

class Rest {
    type: Type
    pow: double
    acc: double
    +Rest()
    #applySelfEffects(): void
    #describe(): String
}

class Swagger {
    type: Type
    pow: double
    acc: double
    +Swagger()
    #applyOppEffects(): void
    #describe(): String
}

class TailWhip {
    type: Type
    pow: double
    acc: double
    +TailWhip()
    #applyOppEffects(): void
    #describe(): String
}

class WorkUp {
    type: Type
    pow: double
    acc: double
    +WorkUp()
    #applySelfEffects(): void
    #describe(): String
}

object StatusMove
StatusMove : From ru.ifmo.se.pokemon.Move

Rest --|> StatusMove
Swagger --|> StatusMove
TailWhip --|> StatusMove
WorkUp --|> StatusMove

object Move
Move : From ru.ifmo.se.pokemon

StatusMove --|> Move
DamageMove --|> Move

Tropius o-- Headbutt
Tropius o-- Bulldoze
Tropius o-- AerialAce
Tropius o-- RazorLeaf

Eevee o-- TailWhip
Eevee o-- Facade
Eevee o-- WorkUp

Glaceon o-- TailWhip
Glaceon o-- Facade
Glaceon o-- WorkUp
Glaceon o-- FrostBreath

Oddish o-- Swagger
Oddish o-- Facade

Gloom o-- Swagger
Gloom o-- Facade
Gloom o-- Acid

Vileplume o-- Swagger
Vileplume o-- Facade
Vileplume o-- Acid
Vileplume o-- Rest

@enduml